<resources>
    <string name="app_name">Workshop Labs</string>
    <string name="machine">Machine Shop</string>
    <string name="fitting">Fitting Shop</string>
    <string name="foundry">Foundry Shop</string>
    <string name="welding">Welding Shop</string>
    <string name="des">Documentation</string>
    <string name="dia">Diagrams</string>
    <string name="ref1">Reference video-1</string>
    <string name="ref2">Reference video-2</string>
    <string name="machinet">MACHINE SHOP</string>
    <string name="machined"><b>INTRODUCTION</b>\nA machine shop is a room, building, or company where machining is done. In a machine shop, machinists use machine-tools and cutting-tools to make parts of metal or plastic (but sometimes of other materials such as glass or wood). A machine shop can be a small business (such as a job shop) or a portion of a factory, whether a tool room or a production area for manufacturing. The parts produced can be the end product of the factory, to be sold to customers in the machine industry, the car industry, the aircraft industry, or others. In other cases, companies in those fields have their own machine shops.
\nMachine shop is a place in which metal parts are cut to the required size and put together form mechanical units or machines. The machines so made are to be used directly or indirectly in the production of necessities and luxuries of civilization. Machine shop is the base of all mechanical production.
        \n\n<b>MACHINES</b>
\nA machine is a tool containing one or more parts that uses energy to perform an intended action. Machines are usually powered by mechanical, chemical, thermal, or electrical means, and are often motorized. Historically, a power tool also required moving parts to classify as a machine. However, the advent of electronics has led to the development of power tools without moving parts that are considered machines.
\n\n<b>MACHINING</b>
\nMachining is any of various processes in which a piece of raw material is cut into a desired final shape and size by a controlled material-removal process. The many processes that have this common theme, controlled material removal, are today collectively known as subtractive manufacturing, in distinction from processes of controlled material addition, which are known as additive manufacturing. Exactly what the "controlled" part of the definition implies can vary, but it almost always implies the use of machine tools (in addition to just power tools and hand tools)
        \n\n<u><b>LATHE MACHINE</b></u>
\n\n<b>INTRODUCTION</b>
\nLathe is one of the most versatile and widely used machine tools all over the world. It is commonly known as the mother of all other machine tool. The main function of a lathe is to remove metal from a job to give it the required shape and size. The job is secure1y and rigid1y held in the chuck or in between centers on the lathe machine and then turn it against a single point cutting tool which wi1l remove meta1 from the job in the form of chips. Fig. 21.1 showsthe working principle of lathe. An engine lathe is the most basic and simplest form of the lathe. It derives its name from the early lathes, which obtained their power from engines. Besides the simple turning operation as described above, lathe can be used to carry out other operations also, such as drilling, reaming, boring, taper turning, knurling, screw- thread cutting, grinding etc Working principle of Lathe Machine
\n\n<b>TYPES OF LATHE</b>
\nLathes are manufactured in a variety of types and sizes, from very small bench lathes used for precision work to huge lathes used for turning large steel shafts. But the principle of operation and function of all types of lathes is same. The different types oflathes are:
\n1. Speed Lathe
\n2. Centre or Engine Lathe
\n3. Bench Lathe
\n4. Tool Room Lathe
\n5. Capstan and Turret Lathe
\n6.Automatic Lathe
    \n\n<b><u>HEAD STOCK</u></b>
\nThe main function of headstock is to transmit power to the different parts of a lathe. It comprises of the headstock casting to accommodate all the parts within it including gear train arrangement. The main spindle is adjusted in it, which possesses live centre to which the work can be attached. It supports the work and revolves with the work, fitted into the main spindle of the headstock. The cone pulley is also attached with this arrangement, which is used to get various spindle speed through electric motor. The back gear arrangement is used for obtaining a wide range of slower speeds. Some gears called change wheels are used to produce different velocity ratio required for thread cutting.</string>
    <string name="weldingd"><b><u>WELDING</u></b>
\nWelding is a process for joining two similar or dissimilar metals by fusion. It joins different metals/alloys, with or without the application of pressure and with or without the use of filler metal. The fusion of metal takes place by means of heat. The heat may be generated either from combustion of gases, electric arc, electric resistance or by chemical reaction. Welding provides a permanent joint but it normally affects the metallurgy of the components. It is therefore usually accompanied by post weld heat treatment for most of the critical components. The welding is widely used as a fabrication and repairing process in industries. Some of the typical applications of welding include the fabrication of ships, pressure vessels, automobile bodies, off shore platform, bridges, welded pipes, sealing of nuclear fuel and explosives, etc. Most of the metals and alloys can be welded by one type of welding process or the other. However, some are easier to weld than others. To compare this ease in welding term ‘weld ability’ is often used. The weld ability may be defined as property of a metal which indicates the ease with which it can be welded with other similar or dissimilar metals. Elements of welding process used with common welding joints such as base metal, fusion zone, weld face, root face, root opening toe and root are depicted in Figure.
\n\n<b>Edge preparations</b>
\nFor welding the edges of joining surfaces of metals are prepared first. Different edge preparations may be used for welding butt joints, which are given in Figure.
\n\n<b>Welding joints</b>
\nSome common welding joints are shown in Figure. Welding joints are of generally of two major kinds namely lap joint and butt joint. The main types are described as under :-
\n\n<b><u>1. Lap weld joint</u></b>
\n<b>Single-Lap Joint</b>
\nThis joint, made by overlapping the edges of the plate, is not recommended for most work. The single lap has very little resistance to bending. It can be used satisfactorily for joining two cylinders that fit inside one another.
\n\n<b>Double-Lap Joint</b>
\nThis is stronger than the single-lap joint but has the disadvantage that it requires twice as much welding.
\n\n<b>Tee Fillet Weld</b>
\nThis type of joint, although widely used, should not be employed if an alternative design is possible.
        \n\n<b><u>2. Butt weld joint</u></b>
\n\n<b>a. Single-Vee Butt Weld</b>
\nIt is used for plates up to 15.8 mm thick. The angle of the vee depends upon the technique being used, the plates being spaced approximately 3.2 mm.
\n\n<b>b. Double-Vee Butt Weld</b>
\nIt is used for plates over 13 mm thick when the welding can be performed on both sides of the plate. The top vee angle is either 60° or 80°, while the bottom angle is 80°, depending on the technique being used.
        \n\n<b><u>Welding Positions</u></b>
\nAs shown in below in figure there are four types of welding positions, which are given as:
\na. Flat or down hand position
\nb. Horizontal position
\nc. Vertical position
\nd. Overhead position
\n\n<b>Flat or Down-hand Welding Position</b>
\nThe flat position or down hand position is one in which the welding is performed from the upper  side of the joint and the face of the weld is approximately horizontal.
\n\n<b>Horizontal Welding Position</b>
\nIn horizontal position, the plane of the work piece is vertical and the deposited weld head is  horizontal.  This position of welding is most commonly used in welding vessels and reservoirs.
\n\n<b>Vertical Welding Position</b>
\nIn vertical position, the plane of the work-piece is vertical and the weld is deposited upon a vertical surface. It is difficult to produce satisfactory welds in this position due to the effect of the force of gravity on the molten metal.</string>
</resources>