<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pandu1"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/AppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/acme"
        android:gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold|italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/AppName"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="10dp"
                app:cardCornerRadius="10dp">

                <org.imaginativeworld.whynotimagecarousel.ImageCarousel
                    android:id="@+id/carousel"
                    android:layout_width="match_parent"
                    android:layout_height="150dp" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/grey"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="6dp"
                    android:background="@color/grey"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:onClick="welding"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/welding" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:text="@string/welding"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/grey"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="6dp"
                    android:background="@color/grey"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:onClick="machine"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/machine" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:text="@string/machine"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/grey"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="6dp"
                    android:background="@color/grey"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:onClick="fitting"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/fitting" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:text="@string/fitting"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginRight="10dp"
                android:backgroundTint="@color/grey"
                app:cardCornerRadius="10dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_marginTop="6dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginBottom="6dp"
                    android:background="@color/grey"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="150dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:onClick="foundry"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/foundry" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:text="@string/foundry"
                        android:textColor="@color/black"
                        android:textSize="18dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>