<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pandu1"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/AppName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/acme"
        android:gravity="start"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="48sp"
        android:textStyle="bold|italic" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/AppName"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="6dp"
                    android:backgroundTint="@color/grey"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="6dp"
                        android:backgroundTint="@color/grey"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:onClick="docu"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/tes1" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:gravity="center"
                            android:textColor="@color/black"
                            android:text="@string/des"
                            android:textSize="18dp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="6dp"
                    android:backgroundTint="@color/grey"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="6dp"
                        android:backgroundTint="@color/grey"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:onClick="youtube1"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/youtube" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:gravity="center"
                            android:text="@string/ref1"
                            android:textColor="@color/black"
                            android:textSize="18dp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="10dp"
                    android:backgroundTint="@color/grey"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="6dp"
                        android:backgroundTint="@color/grey"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:onClick="diag"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/welding4" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:gravity="center"
                            android:text="@string/dia"
                            android:textSize="18dp"
                            android:textColor="@color/black"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginRight="10dp"
                    android:backgroundTint="@color/grey"
                    app:cardCornerRadius="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="6dp"
                        android:backgroundTint="@color/grey"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:layout_marginLeft="15dp"
                            android:layout_marginRight="15dp"
                            android:onClick="youtube2"
                            android:scaleType="fitCenter"
                            app:srcCompat="@drawable/youtube" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="25dp"
                            android:gravity="center"
                            android:text="@string/ref2"
                            android:textSize="18dp"
                            android:textColor="@color/black"
                            android:textStyle="bold" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>